--- a/manifest.json
+++ b/manifest.json
@@ -40,9 +40,9 @@
     "128": "images/apple-touch-icon-114x114.png"
   },
 
-  "content_security_policy": "object-src 'self'; child-src 'self'; default-src 'self' https://media.giphy.com; style-src 'self' 'unsafe-inline';img-src * data:;",
+  "content_security_policy": "object-src 'self'; child-src 'self'; default-src 'self' https://media.giphy.com  https://cdnjs.buymeacoffee.com https://fonts.googleapis.com; style-src * 'self' 'unsafe-inline';img-src * data:; font-src *;",
   "options_page": "options.html",
-  "devtools_page": "devtools/devtools.html",
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
